# pubtator

./: pyproject.toml
pubtator/: __init__.py  parse.py  pubmed.py  request.py  utils.py
tests/: test_parse.py  test_request.py
